syntax = "proto3";
option java_package = "io.lantern.model";

message ServerInfo {
  string city = 1;
  string country = 2;
  string countryCode = 3;
}

message AppData {
  string packageName = 1;
  string icon = 2;
  string name = 3;
  bool isExcluded = 4;
}

message AppsData {
  repeated AppData apps = 1;
}

message Bandwidth {
  int64 percent = 1; // [0, 100]
  int64 remaining = 2; // in MB
  int64 allowed = 3; // in MB
  int64 ttlSeconds = 4; // number of seconds left before data reset
}

message Device {
  string id = 1;
  string name = 2;
  int64 created = 3;
}

message Devices {
  repeated Device devices = 1;
}